--- a/singlec.html
+++ b/singlec.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- CSS local -->
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
@@ -35,32 +35,15 @@
 		</div>
 	</section>
 
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	    </div>
-
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <li><a href="index.html">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li class="active"><a href="singlea.html">SINGLE USE</a></li>
-	        <li><a href="upper_alians_clavicle.html">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
-	        <li><a href="lower_foot_large.html">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
-	        <li><a href="sports_tibia_activmotion.html">SPORTS MEDICINE<span class="sr-only"></span></a></li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
+	<nav class="nav">
+	  <a class="nav-link" href="#" style="background-color: #407d9e;">PRODUCTOS</a>
+	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
+	  <a class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
+	  <a class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
+	  <a class="nav-link" href="#">MEDICINA DEPORTIVA</a>
 	</nav>
 
-	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
@@ -77,53 +60,38 @@
 
 	<section id="info-singlea">
 		<div class="container-fluid">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
-				<h4 class="title-bold">INITIAL C™</h4>
-				<h5 class="title-bold">INDICATIONS</h5>
-				<p>The implants of the Initial C are dedicated to the fixation of fractures, mal-union, non-unions, and osteotomies of the clavicle in adults.</p>
-				<h5 class="title-bold">KIT CONTENT</h5>
-				<ul>
-					<li>Instrumentation</li>
-					<li>Implants: plates and screws</li>
-				</ul>
-				<h5 class="title-bold">IMPLANTS</h5>
-				<p>Initial C™ kits are available with the following implants:</p>
-				<p>Plates:</p>
-				<p>2 types of plates:</p>
-				<p>Medial plates: Size 2 (89 mm)</p>
-				<p>Medial lateral plates: Size 2 (93 mm)</p>
-				<p>Technical features:</p>
-				<p>Precontoured implant</p>
-				<p>Dualtec System 2 technology: polyaxical holes allowing +/- 10 angulation (20° cone).</p>
-				<p>Fixation</p>
-				<br>
-				<ul>
-					<li>Ø3.5 mm locking screws</li>
-					<li>Ø3.5 mm cortical screws</li>
-				</ul>
-				<p>(Additional sterile screws can be ordered separated in Supplemental Sterile Screw Caddy)</p>
-			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
-				<img src="assets/img/img-singlec.png">
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
+					<h4 class="title-bold">INITIAL C™</h4>
+					<h5 class="title-bold">INDICATIONS</h5>
+					<p>The implants of the Initial C are dedicated to the fixation of fractures, mal-union, non-unions, and osteotomies of the clavicle in adults.</p>
+					<h5 class="title-bold">KIT CONTENT</h5>
+					<ul>
+						<li>Instrumentation</li>
+						<li>Implants: plates and screws</li>
+					</ul>
+					<h5 class="title-bold">IMPLANTS</h5>
+					<p>Initial C™ kits are available with the following implants:</p>
+					<p>Plates:</p>
+					<p>2 types of plates:</p>
+					<p>Medial plates: Size 2 (89 mm)</p>
+					<p>Medial lateral plates: Size 2 (93 mm)</p>
+					<p>Technical features:</p>
+					<p>Precontoured implant</p>
+					<p>Dualtec System 2 technology: polyaxical holes allowing +/- 10 angulation (20° cone).</p>
+					<p>Fixation</p>
+					<br>
+					<ul>
+						<li>Ø3.5 mm locking screws</li>
+						<li>Ø3.5 mm cortical screws</li>
+					</ul>
+					<p>(Additional sterile screws can be ordered separated in Supplemental Sterile Screw Caddy)</p>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+					<img src="assets/img/img-singlec.png">
+				</div>
 			</div>
 		</div>
-	</section>
-
-	<section id="menu-down" class="text-center">
-		<div class="inicio">
-			<ul class="lista-principal">
-				<li><a href="#">COMPANY</a></li>
-				<li><a href="#">NEWS</a></li>
-				<li><a href="#">AGENDA</a></li>
-				<li><a href="#">CERTIFICATIONS</a></li>
-				<li><a href="#">INITIAL R</a></li>
-				<li><a href="#">INITIAL A</a></li>
-				<li><a href="#">BROCHURES</a></li>
-				<li><a href="#">VIDEOS</a></li>
-				<li><a href="#">LEGAL NOTICES</a></li>
-				<li><a href="#">CONTACT</a></li>
-			</ul>
-		</div>	
 	</section>
 
 	<footer class="text-center">
@@ -135,6 +103,9 @@
 	
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="assets/js/main.js"></script>
 </body>
 </html>
