--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 	</section>
 
 	<nav class="nav">
+	  <a class="nav-link" href="index.html">PRODUCTOS</a>
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
-	  <a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
+	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
 	  <a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>
 	</nav>
 
@@ -46,7 +47,7 @@
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<li><a href="singles.html">INITIAL S</a></li>
+			<!--<li><a href="singles.html">INITIAL S</a></li>-->
 		</ul>
 	</div>
 
@@ -83,23 +84,23 @@
 
 	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
-			<li><a href="upper_humerus_alians.html">TORNILLOS CANULADOS</a></li>
+			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
 		</ul>
 	</div>
 
-	<div id="lista-menu-7" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+	<!--<div id="lista-menu-7" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul style="margin-left: 368px;">
 			<li><a href="upper_humerus_alians.html">FEMUR</a></li>
 			<li><a href="upper_humerus_alians_elbow.html">PIE</a></li>
 			<li><a href="upper_humerus_alians.html">TIBIA</a></li>
 			<li><a href="upper_humerus_alians_elbow.html">TOBILLO</a></li>
 		</ul>
-	</div>
+	</div>-->
 
 	<div id="lista-menu-8" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul style="margin-left: 674px;">
-			<li><a href="upper_humerus_alians.html">HTO</a></li>
-			<li><a href="upper_humerus_alians_elbow.html">HTO LIGAMENTO</a></li>
+			<li><a href="sports_tibia_activmotion.html">ACTIVMOTION</a></li>
+			<li><a href="lower_tibia_activmotion-ligamento.html">ACTIVMOTION LIGAMENTO</a></li>
 		</ul>
 	</div>
 
