--- a/lower_tibia_activmotion-ligamento.html
+++ b/lower_tibia_activmotion-ligamento.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- CSS local -->
 	<link rel="stylesheet" href="assets/css/style.css">
     <!-- Tipografías -->
@@ -20,11 +20,10 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">COMPANY</a></li>
-						<li><a href="#">NEWS</a></li>
-						<li><a href="#">AGENDA</a></li>
-						<li><a href="#">LINKS</a></li>
-						<li><a href="#">CONTACT</a></li>
+						<li><a href="#">PRODUCTOS</a></li>
+						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="compania.html">EMPRESA</a></li>
+						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
@@ -35,44 +34,73 @@
 		</div>
 	</section>
 
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	    </div>
-
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <li><a href="index.html">PRODUCTS<span class="sr-only">(current)</span></a></li>
-	        <li class="active"><a href="singlea.html">SINGLE USE</a></li>
-	        <li><a href="upper_alians_clavicle.html">UPPER LIMB & HAND<span class="sr-only"></span></a></li>
-	        <li><a href="lower_foot_large.html">LOWER LIMB & FOOT<span class="sr-only"></span></a></li>
-	        <li><a href="sports_tibia_activmotion.html">SPORTS MEDICINE<span class="sr-only"></span></a></li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
+	<nav class="nav">
+	  <a class="nav-link" href="index.html">PRODUCTOS</a>
+	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
+	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
+	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
+	  <a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>
 	</nav>
 
-	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<ul>
-			<li><a href="#">FEMUR</a></li>
-			<li><a href="singlec.html">FOOT</a></li>
-			<li><a href="singler.html">TIBIA</a></li>
-			<li><a href="upper_hand_handmotion.html">ANCLE</a></li>
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: -10px;">
+			<li><a href="singlea.html">INITIAL A</a></li>
+			<li><a href="singlec.html">INITIAL C</a></li>
+			<li><a href="singler.html">INITIAL R</a></li>
+			<!--<li><a href="singles.html">INITIAL S</a></li>-->
 		</ul>
 	</div>
 
-	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
-			<li><a href="activmotion.html">ACTIVMOTION</a></li>
-			<li><a href="upper_humerus_alians.html">ACTIVMOTION LIGAMENTO</a></li>
+			<li><a id="clavicula" href="upper_alians_clavicle.html">CLAVICULA</a></li>
+			<li><a id="humero" href="#">HUMERO</a></li>
+			<li><a id="radio" href="singler.html">RADIO Y CUBITO</a></li>
+			<li><a id="mano" href="singles.html">MANO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-3" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_alians_clavicle.html">ALIANS CLAVICULA</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-4" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_humerus_alians.html">HUMERO PROXIMAL</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">CODO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="uppper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
+			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
+			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
+		</ul>
+	</div>
+
+	<!--<div id="lista-menu-7" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 368px;">
+			<li><a href="upper_humerus_alians.html">FEMUR</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">PIE</a></li>
+			<li><a href="upper_humerus_alians.html">TIBIA</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">TOBILLO</a></li>
+		</ul>
+	</div>-->
+
+	<div id="lista-menu-8" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 674px;">
+			<li><a href="sports_tibia_activmotion.html">ACTIVMOTION</a></li>
+			<li><a href="lower_tibia_activmotion-ligamento.html">ACTIVMOTION LIGAMENTO</a></li>
 		</ul>
 	</div>
 	
@@ -83,32 +111,34 @@
 
 	<section id="info-singlea">
 		<div class="container-fluid">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
-				<h4 class="title-bold">ACTIVMOTION LIGAMENTO</h4>
-				<p>HTO + LCA</p>
-				<br>
-				<h5 class="title-bold">INDICATIONS</h5>
-				<p>The implants of the Activ range are intended for high tibial osteotomy in adults.</p>
-				<br>
-				<h5 class="title-bold">TECHNICAL FEATURES</h5>
-				<p>Implant well-suited for sports medicine: two-in-one opertaion for shortening patients rehabilitation time. <br> Optimal design and positioning allowing for the drilling of the tunnel without conflict - Proximal curvature and metaphyseal slope from 8° to 12° <br> Dualtec System technology: 2 polyaxial epiphyseal hole allowing +/- 12.5° angulation (25° cone)</p>
-				<br>
-				<h5 class="title-bold">IMPLANTS</h5>
-				<p>Opening wedge tibial osteotomy plate combined with ACL reconstructive surgery (74.1 mm) available in right and left versions <br> Single fixation: 4.5 mm locking screws, length 30 to 75 mm (5mm increment)</p>
-				<br>
-				<h5 class="title-bold">REFERENCES</h5>
-				<div class="container-fluid">
-					<div class="row">
-						<img src="assets/img/img-activmotionligamento.jpg">
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
+					<h4 class="title-bold">ACTIVMOTION LIGAMENTO</h4>
+					<p>HTO + LCA</p>
+					<br>
+					<h5 class="title-bold">INDICATIONS</h5>
+					<p>The implants of the Activ range are intended for high tibial osteotomy in adults.</p>
+					<br>
+					<h5 class="title-bold">TECHNICAL FEATURES</h5>
+					<p>Implant well-suited for sports medicine: two-in-one opertaion for shortening patients rehabilitation time. <br> Optimal design and positioning allowing for the drilling of the tunnel without conflict - Proximal curvature and metaphyseal slope from 8° to 12° <br> Dualtec System technology: 2 polyaxial epiphyseal hole allowing +/- 12.5° angulation (25° cone)</p>
+					<br>
+					<h5 class="title-bold">IMPLANTS</h5>
+					<p>Opening wedge tibial osteotomy plate combined with ACL reconstructive surgery (74.1 mm) available in right and left versions <br> Single fixation: 4.5 mm locking screws, length 30 to 75 mm (5mm increment)</p>
+					<br>
+					<h5 class="title-bold">REFERENCES</h5>
+					<div class="container-fluid">
+						<div class="row">
+							<img src="assets/img/img-activmotionligamento.jpg">
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
-				<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
-				<ul>
-					<li><a href="#">Activmotion Ligamento Brochure</a></li>
-					<li><a href="#">Activmotion Ligamento Surgical Technique</a></li>
-				</ul>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+					<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
+					<ul>
+						<li><a href="#">Activmotion Ligamento Brochure</a></li>
+						<li><a href="#">Activmotion Ligamento Surgical Technique</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -139,6 +169,9 @@
 	
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="assets/js/main.js"></script>
 </body>
 </html>
